# Montreal-Forced-Aligner

./: .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AR_dict.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  _config.yml  accuracy_manual.txt  automate_new_models.py  automate_validation.py  eng.dict  english_us_arpa.dict  entrypoint.sh  environment.yml  environment_win.yml  github_environment.yml  index.html  index.md  make_dict.py  mfa.prof  params.json  pyproject.toml  requirements.txt  rtd_environment.yml  rtd_requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  publish-to-test-pypi.yml  publish.yml  publish_docker.yml
aligner/: __init__.py  accuracy_graph.py  align.py  aligner.py  archive.py  commandline.py  config.py  corpus.py  data_prep.py  data_split.py  dictionary.py  exceptions.py  generalUML.py  helper.py  models.py  multiprocessing.py  textgrid.py  train.py  utils.py  validation.py  validator.py
aligner/aligner/: base.py  pretrained.py  trainable.py
aligner/command_line/: align.py  download.py  g2p.py  generate_dict.py  generate_dictionary.py  mfa.py  train_and_align.py  train_g2p.py  validate.py  validate_dataset.py
aligner/config/: __init__.py  basic_align.yaml  basic_train.yaml
aligner/dictmaker/: __init__.py  exceptions.py  inspect.py  makedict.py  wordlist.lst
aligner/features/: config.py  processing.py
aligner/g2p/: create_dictionary.py  generator.py  train.py  trainer.py
aligner/g2p_trainer/: execute.sh  execute_ch.sh  train.py
aligner/helper_scripts/: filter_scp.py  scripts.py
aligner/prep/: __init__.py  config.py  data.py  dict.py  helper.py  lang.py  mfcc.py
aligner/trainers/: __init__.py  base.py  ivector_extractor.py  lda.py  monophone.py  nnet.py  sat.py  triphone.py
ci/: docker_environment.yaml  mfa_publish.yml
continuous-integration/travis/: install.sh
docs/: Makefile  make.bat
docs/source/: aligning.rst  alignment_techniques.rst  annotator.rst  api_command_line.rst  api_index.rst  api_multiprocessing.rst  api_trainers.rst  apireference.rst  changelog.rst  classify_speakers.rst  commands.rst  commonerrors.rst  conf.py  configuration.rst  configuration_align.rst  configuration_g2p.rst  configuration_ivector.rst  configuration_lm.rst  configuration_segment.rst  (+27 more)
examples/: chinese_dict.txt  chinese_dict_char.txt  test_output  wordlist
freezing/: freeze.bat  freeze.py  freeze.sh  freeze_final.py
montreal_forced_aligner/: __init__.py  __main__.py  _version.py  abc.py  config.py  corpus.py  data.py  db.py  dictionary.py  exceptions.py  helper.py  models.py  multiprocessing.py  segmenter.py  speaker_classifier.py  speaker_diarizer.py  textgrid.py  transcriber.py  utils.py  validator.py
notebooks/: debugging_alignments.ipynb
pretrained_models/: LICENSE
tests/: alignerbenchmarking.py  conftest.py  test_a_example.py  test_aatrainer.py  test_abc.py  test_acoustic_model_training.py  test_acoustic_modeling.py  test_aligner.py  test_alignment_pretrained.py  test_atrainer.py  test_commandline.py  test_commandline_adapt.py  test_commandline_align.py  test_commandline_classify_speakers.py  test_commandline_configure.py  test_commandline_create_segments.py  test_commandline_diarize_speakers.py  test_commandline_download.py  test_commandline_find_oovs.py  test_commandline_g2p.py  test_commandline_history.py  test_commandline_lm.py  test_commandline_model.py  test_commandline_remap.py  test_commandline_thirdparty.py  test_commandline_tokenize.py  test_commandline_train.py  test_commandline_train_dict.py  test_commandline_train_ivector.py  test_commandline_transcribe.py  test_commandline_validate.py  test_config.py  test_corpus.py  test_dict.py  test_dictmaker_accuracy copy.py  test_dictmaker_accuracy.py  test_example.py  test_g2p.py  test_gui.py  test_helper.py  (+6 more)
(+602 files in other folders)
