[metadata]
name = Montreal_Forced_Aligner
description = Montreal Forced Aligner is a package for aligning speech corpora using Kaldi functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MontrealCorpusTools/Montreal-Forced-Aligner
author = Montreal Corpus Tools
author_email = michael.e.mcauliffe@gmail.com
maintainer = Michael McAuliffe
maintainer_email = michael.e.mcauliffe@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers = Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
keywords = phonology
    corpus
    phonetics
    alignment
    segmentation
    transcription
    g2p
    language modeling

[options]
packages = find:
install_requires =
    biopython
    click
    dataclassy
    kneed
    librosa
    matplotlib
    numpy
    praatio>=6.0.0
    pyyaml
    requests
    rich
    rich-click
    scikit-learn
    seaborn
    sqlalchemy>=1.4
    tqdm
python_requires = >=3.8
include_package_data = True
scripts =
    bin/mfa_update

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    mfa = montreal_forced_aligner.command_line.mfa:mfa_cli

[options.extras_require]
anchor =
    anchor-annotator
    pyqtgraph
    pyside6
dev =
    coverage
    coveralls
    interrogate
    pytest
    pytest-mypy
    setuptools-scm
    tomli
    tox
    tox-conda
docs =
    interrogate
    numpydoc
    pydata-sphinx-theme
    sphinx
    sphinx-click
    sphinx-design
testing =
    coverage
    coveralls
    pytest
    pytest-mypy

[options.package_data]
montreal_forced_aligner =
    montreal_forced_aligner/tokenization/resources/*.dic
    montreal_forced_aligner/tokenization/resources/*.def
    montreal_forced_aligner/tokenization/resources/*.json

[tool:pytest]
testpaths = tests
norecursedirs = data
